# SoV

./: .gitignore  README.md  app_onefile.py  model_onefile_buttchain_fixed.csv  pyproject.toml
.github/workflows/: ci.yml  headless-smoke.yml  smoke.yml
_tmp/: check_fillet_x_corr.py  visualize_fillet_partition.py
data/: model_min_marking_attach.csv  model_min_marking_attach_butt_shrink.csv  model_onefile_buttchain_fixed.csv  model_onefile_buttchain_fixed_buttfitup_pr1.csv  model_onefile_buttchain_fixed_buttfitup_pr2.csv  model_onefile_buttpair_single_steps.csv  model_onefile_buttpair_with_fillet_attach.csv  model_onefile_filletpair_single_steps.csv  model_ooban_L1998_gap4_markx1000_3000_parent_follow.csv  model_ooban_parented_marking_x1000_x3000_L1998_gap4_total4000.csv  model_tanban_L1998_gap4_markx1000_3000_parent_follow.csv  model_tanban_parented_marking_x1000_x3000_L1998_gap4_total4000.csv
docs/: diagnosis_step30_40_buttpair.md  diagnosis_step30_large_move.md  engine_integrity_report.md  refactor_notes.md
scripts/: debug_marking_line_fillet_classification.py  diagnose_buttpair_step30_40.py
src/sov_app/: __init__.py  __main__.py  config.py  core_models.py  env.py  headless.py  io_csv.py  legacy_impl.py  smoke.py  (+8 more)
tests/: test_cutting_realized_dims.py  test_engine_imports.py  test_engine_purity.py  test_fitup_array_attach_fillet.py  test_fitup_pair_chain_butt_fitup.py  test_headless_dims_output.py  test_headless_trace_wiring.py  test_marking_line_attach.py  test_marking_line_attach_min_csv.py  test_monte_carlo_trace_outputs.py
tools/: check_engine_purity.py
(+12 files in other folders)
